testing/errors/macrotwice2.a
	*=$1000
	!macro m @arg {
		nop
	}
	!src "alreadydefined.inc"
